# agent-board

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  release.sh
.github/workflows/: build-and-release.yml  ci.yml
.stakpak/warden/: warden_logs.db
.stakpak/warden/ca/: warden_ca.crt  warden_ca.key
paks/: SKILL.md
src/: cli.rs  db.rs  main.rs  models.rs  output.rs  schema.sql
