[package]
name = "agent-board"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
tabled = "0.15"
thiserror = "1.0"
libsql = { version = "0.9", default-features = false, features = ["core"] }
tokio = { version = "1.29", features = ["rt", "macros"] }
colored = "2.1"
names = { version = "0.14.0", default-features = false }
